# HermesDevelopment

./: .gitignore  CLAUDE.md  Makefile  PR6_ACTUAL_STATUS.md  PR_8_EVIDENCE.md  PR_9_EVIDENCE.md  README.md  T1.2_EVIDENCE.md  agents_minimal_output.txt  debug_pm_patch.py  demo_pm_vs_c.py  design_doc.md  e2e_output.txt  latency_output.txt  mcp_deref_metrics.json  mvp-spec.md  new_latency_output.txt  prepare_hermetic_run.sh  pyproject.toml  run_hermetic_tests.sh  run_manifest.json  test_3_instances.txt  test_determinism_verification.py  test_hermetic_harness.py  test_hermetic_setup.py  test_mcp_minimal.py  test_network_block.py  transport_rtt_output.txt  unit_test_output.txt  verify_hermetic_ready.py
agents/: __init__.py  coder.py  planner.py  pm_arm.py  pm_arm_enhanced.py  pm_shared_content.py  real_tester.py  tester.py
configs/: generation.yaml  generation_accept_demo.yaml  generation_original.yaml  swebench_lite.yaml  swebench_lite_slice20.txt  swebench_lite_slice50.txt
docs/: design_doc.md  mvp-spec.md  references.md
env/: __init__.py  _network_guard.py  hermetic.py  hermetic_repos.py
eval/: __init__.py  _seed.py  run_arms.py  swebench_bridge.py
mcp/: __init__.py  benchmark.py  client.py  server.py
proto/: __init__.py  baseline.proto  baseline_pb2.py  baseline_pb2_grpc.py
runs/: actual_manifest.json  actual_runtime_manifest.json
scripts/: calculate_p95.py  check_acceptance.py  check_acceptance_final.py  check_acceptance_minimal.py  check_acceptance_simple.py  check_pm_patches.py  check_t12_acceptance.py  create_mock_swebench.py  debug_mcp_resolution.py  (+11 more)
(+117 files in other folders)
